# ml_tetris_rl

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: __init__.py  test_observation.py
src/: __init__.py
src/env/: __init__.py  tetris_env.py
tests/: test_env_reset.py  test_game_over.py  test_line.py  test_line_clear.py  test_observation.py  test_place_piece.py  test_step.py
